--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 
-  <div class="section bg-black row-100 row-v j-center-v j-center-h">
+  <div id="home" class="section bg-black row-100 row-v j-center-v j-center-h">
 
     <div class="text-center">
       <img src="images/monkey_color.svg" class="logo" />
@@ -34,7 +34,7 @@
   </div>
 
 
-  <div class="section row-100 row-v j-center-v  j-center-h font-raleway">
+  <div id="company" class="section row-100 row-v j-center-v  j-center-h font-raleway">
 
     <div class="col-50-lg">
       <h2 class="text-center font-300">ABOUT</h2>
@@ -101,7 +101,9 @@
             </div>
           </div>
           <div class="team-tile text-center">
-            <img src="images/team/cheeky.jpeg" alt="cheeky" class="team-pic">
+            <a href="https://www.instagram.com/fran.zeus/" target="_blank">
+              <img src="images/team/cheeky.jpeg" alt="cheeky" class="team-pic">
+            </a>
             <div class="team-name">
               Cheeky
               <div class="team-title text-small">
@@ -169,7 +171,7 @@
   </div>
 
 
-  <div class="section bg-hex row-100 row-v j-center-v j-center-h color-white">
+  <div id="beehave" class="section bg-hex row-100 row-v j-center-v j-center-h color-white">
 
     <div>
 
@@ -178,6 +180,9 @@
         <h2 class="beehave-title">
           <span class="brand-orange">bee</span>have
         </h2>
+        <div class="space-md"></div>
+
+        <iframe id="youtube-iframe" width="560" height="315" src="https://www.youtube-nocookie.com/embed/NDwF4VrPxY4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         <div class="space-md"></div>
         <div class="col-90 text-center margin-auto lh-15">
@@ -213,7 +218,7 @@
 
   </div>
 
-  <div class="section bg-bananas bg-cover row-100 row-v j-center-v j-center-h">
+  <div id="contact" class="section bg-bananas bg-cover row-100 row-v j-center-v j-center-h">
 
     <div>
       <div class="bg-light contact-content row-v j-center-v j-center-h margin-auto">
@@ -240,5 +245,60 @@
     </div>
 
   </div>
+
+  <div id="menu-desktop" class="menu  bg-black color-pink col-100 ">
+    <div class="space-lg"></div>
+    <div class="row">
+      <div class="col-60"></div>
+      <div class="col-30">
+        <div class="row j-between">
+          <div>
+            <a href="#home" class="no-decoration">Home</a>
+          </div>
+          <div>
+            <a href="#company" class="no-decoration">Company</a>
+          </div>
+          <div>
+            <a href="#beehave" class="no-decoration">Beehave</a>
+          </div>
+          <div>
+            <a href="#contact" class="no-decoration">Contact</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-10"></div>
+    </div>
+    <div class="space-lg"></div>
+  </div>
+
+  <div id="menu-mobile" class="menu color-pink">
+    <div class="menu-icon">
+      <i class="fas fa-bars"></i>
+    </div>
+    <div class="menu-items lh-15">
+      <div>
+        <a href="#home">Home</a>
+      </div>
+      <div>
+        <a href="#company">Company</a>
+      </div>
+      <div>
+        <a href="#beehave">Beehave</a>
+      </div>
+      <div>
+        <a href="#contact">Contact</a>
+      </div>
+    </div>
+  </div>
+
+  <script type="text/javascript">
+    var menu_ele = document.getElementById("menu-mobile");
+    menu_ele.addEventListener("click", function() {
+
+      menu_ele.classList.toggle("visible");
+
+    });
+
+  </script>
 </body>
 </html>
