company section, background and map

--- a/index.html
+++ b/index.html
@@ -33,16 +33,57 @@
 
   </div>
 
-
   <div id="company" class="section row-100 row-v j-center-v  j-center-h font-raleway">
 
-    <div class="col-50-lg">
+    <div class="col-70-lg">
+      <div class="space-lg md-hidden"></div>
       <h2 class="text-center font-300">ABOUT</h2>
+      <div class="space-lg"></div>
+
+      <div class="text-center content col-90 font-lg lh-15">
+        <div class="row col-100">
+          <div class="col-50 col-100-sm p-1">
+            <i class="far fa-grin-hearts icon-company"></i>
+            <div class="space-md"></div>
+            Our mission is to create intuitive and inventive applications that understand and please customers and users.
+          </div>
+          <div class="col-50 col-100-sm p-1">
+            <i class="fas fa-chess icon-company"></i>
+            <div class="space-md"></div>
+            Our vision is to Fulfill a solid digital presence driving a new era of creative development, growth, and productivity.
+          </div>
+        </div>
+
+        <div class="space-lg sm-hidden"></div>
+
+        <div class="row col-100">
+          <div class="col-50 col-100-sm p-1">
+            <i class="far fa-heart icon-company"></i>
+            <div class="space-md"></div>
+            Our values are creativity and innovation, passion and competitiveness and integrity.
+          </div>
+          <div class="col-50 col-100-sm p-1">
+            <i class="fas fa-bullseye icon-company"></i>
+            <div class="space-md"></div>
+            Our objective is to provide quality applications and cost-effective solutions to our users.
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+
+  <div id="team" class="section bg-pink color-white row-100 row-v j-center-v j-center-h font-raleway">
+
+    <div class="col-50-lg">
+      <div class="space-lg md-hidden"></div>
+      <h2 class="text-center font-300">TEAM</h2>
       <div class="space-md"></div>
 
       <div class="text-center content col-90 font-lg lh-15">
-        <i>We are a team of creative monkeys from all around the world.
-          We build websites, apps and games which do not only reward us with a banana or two, but customer satisfaction.
+        <i>
+          We are creative monkeys from all around the world.
         </i>
       </div>
 
@@ -87,6 +128,9 @@
           </div>
 
         </div>
+
+        <div class="space-lg md-hidden"></div>
+
         <div class="row j-around">
           <div class="team-tile text-center">
             <img src="images/team/amber.jpeg" alt="amber" class="team-pic">
@@ -127,6 +171,9 @@
             </div>
           </div>
         </div>
+
+        <div class="space-lg md-hidden"></div>
+
         <div class="row j-around">
           <div class="team-tile text-center">
             <img src="images/team/mario.jpeg" alt="mario" class="team-pic">
@@ -166,6 +213,7 @@
           </div>
         </div>
       </div>
+      <div class="space-lg md-hidden"></div>
     </div>
 
   </div>
@@ -174,7 +222,7 @@
   <div id="beehave" class="section bg-hex row-100 row-v j-center-v j-center-h color-white">
 
     <div>
-
+      <div class="space-lg md-hidden"></div>
       <div class="text-center">
         <img src="images/beehave.png" class="beehave-icon">
         <h2 class="beehave-title">
@@ -182,7 +230,7 @@
         </h2>
         <div class="space-md"></div>
 
-        <iframe id="youtube-iframe" width="560" height="315" src="https://www.youtube-nocookie.com/embed/NDwF4VrPxY4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe id="youtube-iframe" width="560" height="315" src="" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         <div class="space-md"></div>
         <div class="col-90 text-center margin-auto lh-15">
@@ -213,38 +261,52 @@
         </div>
       </div>
 
-
+      <div class="space-lg md-hidden"></div>
     </div>
 
   </div>
 
   <div id="contact" class="section bg-bananas bg-cover row-100 row-v j-center-v j-center-h">
 
-    <div>
-      <div class="bg-light contact-content row-v j-center-v j-center-h margin-auto">
+    <div class="row">
 
-        <div class="text-center lh-15 font-raleway">
-          <h3>STATUS SEEKING MONKEYS</h3>
-          <a href="mailto:mail@status-seeking-monkeys.com">mail@status-seeking-monkeys.com</a>
-          <div class="space-md"></div>
+      <div class="col-100 col-100-sm row-v j-center-v j-center-h">
 
-          <a href="https://linkedin.com/company/status-seeking-monkeys" target="_blank" class="font-lg no-decoration">
-            <i class="fab fa-linkedin"></i> LinkedIn
-          </a>
 
+        <div class="bg-light contact-content row-v j-center-v j-center-h margin-auto pos-rel">
+
+          <iframe id="gmaps" src="" frameborder="0" class="gmaps col-90 margin-auto" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+
+          <div class="text-center lh-15 font-raleway text-sm contact-info">
+            <h3>STATUS SEEKING MONKEYS</h3>
+            <a href="mailto:mail@status-seeking-monkeys.com">mail@status-seeking-monkeys.com</a>
+            <div class="space-md"></div>
+
+            <a href="https://linkedin.com/company/status-seeking-monkeys" target="_blank" class="font-lg no-decoration">
+              <i class="fab fa-linkedin"></i> LinkedIn
+            </a>
+
+          </div>
         </div>
+
+        <div class="space-md"></div>
+
+        <div class="text-small text-center credits">
+          <h6>CREDITS</h6>
+          <div>Icons made by <a href="https://www.flaticon.com/authors/iconixar" title="iconixar" class="no-decoration ">iconixar</a> from <a href="https://www.flaticon.com/" title="Flaticon" class="no-decoration ">www.flaticon.com</a></div>
+          <a href="https://www.freepik.com/free-photos-vectors/background" class="no-decoration">Background vector created by myriammira - www.freepik.com</a>
+        </div>
+
+        <div class="space-lg md-hidden"></div>
       </div>
 
-      <div class="space-md"></div>
-
-      <div class="text-small text-center credits">
-        <h6>CREDITS</h6>
-        <div>Icons made by <a href="https://www.flaticon.com/authors/iconixar" title="iconixar" class="no-decoration ">iconixar</a> from <a href="https://www.flaticon.com/" title="Flaticon" class="no-decoration ">www.flaticon.com</a></div>
-        <a href="https://www.freepik.com/free-photos-vectors/background" class="no-decoration">Background vector created by myriammira - www.freepik.com</a>
-      </div>
     </div>
 
   </div>
+
+  <!--
+    MENU DESKTOP
+  -->
 
   <div id="menu-desktop" class="menu  bg-black color-pink col-100 ">
     <div class="space-lg"></div>
@@ -259,6 +321,9 @@
             <a href="#company" class="no-decoration">Company</a>
           </div>
           <div>
+            <a href="#team" class="no-decoration">Team</a>
+          </div>
+          <div>
             <a href="#beehave" class="no-decoration">Beehave</a>
           </div>
           <div>
@@ -270,6 +335,10 @@
     </div>
     <div class="space-lg"></div>
   </div>
+
+  <!--
+    MENU MOBILE
+  -->
 
   <div id="menu-mobile" class="menu color-pink">
     <div class="menu-icon">
@@ -283,6 +352,9 @@
         <a href="#company">Company</a>
       </div>
       <div>
+        <a href="#team" class="no-decoration">Team</a>
+      </div>
+      <div>
         <a href="#beehave">Beehave</a>
       </div>
       <div>
@@ -292,13 +364,55 @@
   </div>
 
   <script type="text/javascript">
+    // -----------------------------------------------------------------------------------
+    // MENU
+    // -----------------------------------------------------------------------------------
     var menu_ele = document.getElementById("menu-mobile");
     menu_ele.addEventListener("click", function() {
-
       menu_ele.classList.toggle("visible");
-
     });
 
+    // -----------------------------------------------------------------------------------
+    // Lazy loading
+    // -----------------------------------------------------------------------------------
+    var options = {
+      root: null,
+      rootMargin: '0px',
+      threshold: 0.1
+    }
+    var loaded_intersections = {};
+
+    function loadBeehaveContent() {
+      document.getElementById("youtube-iframe").src = "https://www.youtube-nocookie.com/embed/NDwF4VrPxY4";
+    }
+
+    function loadContactContent() {
+      document.getElementById("gmaps").src = "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d86456.59681250427!2d8.466675670186474!3d47.377433669343766!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47900b9e60ff220b%3A0x7fe7dd2efbca5f90!2sStatus%20Seeking%20Monkeys!5e0!3m2!1sen!2sch!4v1594535977631!5m2!1sen!2sch";
+    }
+
+    var observer = new IntersectionObserver(function(entries, observer) {
+      entries.forEach(entry => {
+        if (entry.isIntersecting) {
+          var target_id = entry.target.id;
+
+          if (!loaded_intersections[target_id]) {
+            loaded_intersections[target_id] = target_id;
+
+            if (target_id === "beehave") {
+              loadBeehaveContent();
+            } else if (target_id === "contact") {
+              loadContactContent();
+            }
+          }
+
+        }
+      });
+    }, options);
+
+    var beehave_target = document.querySelector('#beehave');
+    var contact_target = document.querySelector('#contact');
+    observer.observe(beehave_target);
+    observer.observe(contact_target);
   </script>
 </body>
 </html>
