Removed map. Removed team

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           <div class="team-tile text-center">
             <img src="images/team/francois.png" alt="francois" class="team-pic">
             <div class="team-name">
-              Francois
+              François
               <div class="team-title text-small">
                 <a href="mailto:pancho@status-seeking-monkeys.com" class="no-decoration">
                   <i class="far fa-envelope"></i>
@@ -114,6 +114,13 @@
               </div>
             </div>
           </div>
+
+        </div>
+
+        <div class="space-lg md-hidden"></div>
+
+        <div class="row j-around">
+
           <div class="team-tile text-center">
             <img src="images/team/mariana.jpg" alt="mariana" class="team-pic">
             <div class="team-name">
@@ -127,23 +134,6 @@
             </div>
           </div>
 
-        </div>
-
-        <div class="space-lg md-hidden"></div>
-
-        <div class="row j-around">
-          <div class="team-tile text-center">
-            <img src="images/team/amber.jpeg" alt="amber" class="team-pic">
-            <div class="team-name">
-              Amber
-              <div class="team-title text-small">
-                <a href="mailto:amber@status-seeking-monkeys.com" class="no-decoration">
-                  <i class="far fa-envelope"></i>
-                  Partnerships
-                </a>
-              </div>
-            </div>
-          </div>
           <div class="team-tile text-center">
             <a href="https://www.instagram.com/fran.zeus/" target="_blank">
               <img src="images/team/cheeky.jpeg" alt="cheeky" class="team-pic">
@@ -158,60 +148,9 @@
               </div>
             </div>
           </div>
-          <div class="team-tile text-center">
-            <img src="images/team/jimena.jpeg" alt="jimena" class="team-pic">
-            <div class="team-name">
-              Jimena
-              <div class="team-title text-small">
-                <a href="mailto:jimena@status-seeking-monkeys.com" class="no-decoration">
-                  <i class="far fa-envelope"></i>
-                  Finance & PR
-                </a>
-              </div>
-            </div>
-          </div>
+
         </div>
 
-        <div class="space-lg md-hidden"></div>
-
-        <div class="row j-around">
-          <div class="team-tile text-center">
-            <img src="images/team/mario.jpeg" alt="mario" class="team-pic">
-            <div class="team-name">
-              Mario
-              <div class="team-title text-small">
-                <a href="mailto:mario@status-seeking-monkeys.com" class="no-decoration">
-                  <i class="far fa-envelope"></i>
-                  Design &amp; UX
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="team-tile text-center">
-            <img src="images/team/hedi.jpeg" alt="hedi" class="team-pic">
-            <div class="team-name">
-              Hedi
-              <div class="team-title text-small">
-                <a href="mailto:hedi@status-seeking-monkeys.com" class="no-decoration">
-                  <i class="far fa-envelope"></i>
-                  Frontend Engineer
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="team-tile text-center">
-            <img src="images/team/edward.jpeg" alt="edward" class="team-pic">
-            <div class="team-name">
-              Edward
-              <div class="team-title text-small">
-                <a href="mailto:edward@status-seeking-monkeys.com" class="no-decoration">
-                  <i class="far fa-envelope"></i>
-                  Backend Engineer
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
       </div>
       <div class="space-lg md-hidden"></div>
     </div>
@@ -274,8 +213,6 @@
 
 
         <div class="bg-light contact-content row-v j-center-v j-center-h margin-auto pos-rel">
-
-          <iframe id="gmaps" src="" frameborder="0" class="gmaps col-90 margin-auto" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 
           <div class="text-center lh-15 font-raleway text-sm contact-info">
             <h3>STATUS SEEKING MONKEYS</h3>
@@ -400,8 +337,6 @@
 
             if (target_id === "beehave") {
               loadBeehaveContent();
-            } else if (target_id === "contact") {
-              loadContactContent();
             }
           }
 
